--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
   <head>
     <title>She Codes Plus</title>
     <meta charset="UTF-8" />
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
+    <link href="src/style.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <style>
-      h1 {
-        text-align: center;
-        color: blue;
-      }
-    </style>
   </head>
 
   <body>
     <h1>Hello World!</h1>
+    <script src="index.js"></script>
   </body>
 </html>
